# bitproject

./: .gitignore  AutoDriveMode.cpp  AutoDriveMode.h  HardwareControl.cpp  HardwareControl.h  ImageProcessMode.cpp  ImageProcessMode.h  Logger.cpp  Logger.h  MainMachine.cpp  MainMachine.h  ManualDriveMode.cpp  ManualDriveMode.h  Mode.cpp  Mode.h  README.md  TakePhotoMode.cpp  TakePhotoMode.h  bitproject.sln  main.cpp
ImageDB/: booknames.txt  imgdb.vtree  imgdb_demo.vtree  test1.txt  test2.txt
VocabularyTree/: UtilityFunctions.h  VocabularyTree Train Example.cpp  VocabularyTree.cpp  VocabularyTree.h
bit_custom_msgs/: CMakeLists.txt  package.xml
bit_custom_msgs/msg/: YOLOBoxInfo.msg
bitproject/: bitproject.vcxproj  bitproject.vcxproj.filters
book_info/: books0.txt  books1.txt
built_graph/: book_2class_yolo2.pb  book_4class_yolo2.pb
client_pkg/: CMakeLists.txt  package.xml  temp.txt
documents/: 2조 폼보드.txt  Jetbot 이미지 설치부터 Lidar 초기 설정까지.html  Jetson Nano(Jetbot Image 사용)에 OpenCV 4.1.0 설치.html  darkflow(ubuntu설치).rtf  darkflow(window10 설치).rtf  다크넷설치(ubuntu).rtf  문서정리(UI & 카메라).doc  비트교육센터 프로젝트 2조 최종보고서.docx  자율 주행 및 Google.docx  참고문헌.txt  프로젝트 발표회 팜플랫.txt
log/: log.txt
mapper_pkg/: CMakeLists.txt  package.xml
robot_pkg/: CMakeLists.txt  package.xml
robot_pkg/include/: AStar.h  AutoDriveMode.h  BookImgPreProcessor.h  BookPreProcessor.h  BookSegmentation.h  CoordinateConverter.h  ImageDB.h  ImageProcessMode.h  KMajorityData.h  Logger.h  MainMachine.h  Mode.h  PathFinder.h  SimpleMapBuilder.h  StandbyMode.h  TakePhotoMode.h  UtilityFunctions.h
robot_pkg/route_info/: destinations.txt
robot_pkg/scripts/: Launch_Manager.py  camera_node.py  lsm303.py  motor_control_node.py  sub.py  test.py
robot_pkg/src/: AStar.cpp  AutoDriveMode.cpp  BookImgPreProcessor.cpp  BookPreProcessor.cpp  BookSegmentation.cpp  CoordinateConverter.cpp  ImageDB.cpp  ImageProcessMode.cpp  Logger.cpp  MainMachine.cpp  Mode.cpp  PathFinder.cpp  SimpleMapBuilder.cpp  StandbyMode.cpp  TakePhotoMode.cpp  UtilityFunctions.cpp  main.cpp
robot_pkg/src/test/: ImageDB example.cpp
vtree_train/: CMakeLists.txt  package.xml
vtree_train/include/: UtilityFunctions.h  VocabularyTree.h
vtree_train/src/: KMajorityData.cpp  UtilityFunctions.cpp  VocabularyTree.cpp  main.cpp
(+53 files in other folders)
